chore: complete project documentation and finalize iterations